javascript/ql/test/library-tests/TypeScript/TypeErrors/tst.ts
export interface Foo {
  foo(x: UnresolvedTypeA);
  foo(x: UnresolvedTypeB);
}

var myNumber: number = "not actually a number";
